--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 
-title = "My Blog"
+title = "Hello Code"
 baseURL = "http://www.pugongyingbo.com/"
 enableRobotsTXT = true
 enableEmoji = true
@@ -11,7 +11,7 @@ defaultContentLanguage = "zh-cn"           # Default language to use
   languageCode = "zh-cn"
 
 hasCJKLanguage = true     # has chinese/japanese/korean ? # 自动检测是否包含 中文\日文\韩文
-paginate = 3                                              # 首页每页显示的文章数
+paginate = 5                                              # 首页每页显示的文章数
 rssLimit = 20             # Limit Entry Count to Rss file # 限制 Rss 文章输出数量
 disqusShortname = ""      # disqus_shortname
 googleAnalytics = ""      # UA-XXXXXXXX-X
@@ -27,27 +27,27 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   filename = "sitemap.xml"
 
 [[menu.main]]             # config your menu              # 配置目录
-  name = "Home"
+  name = "首页"
   weight = 10
   identifier = "home"
   url = "/"
 [[menu.main]]
-  name = "Archives"
+  name = "历史"
   weight = 20
   identifier = "archives"
   url = "/post/"
 [[menu.main]]
-  name = "Tags"
+  name = "标签"
   weight = 30
   identifier = "tags"
   url = "/tags/"
 [[menu.main]]
-  name = "Categories"
+  name = "分类"
   weight = 40
   identifier = "categories"
   url = "/categories/"
 [[menu.main]]
-  name = "external-link"
+  name = "关于hugo"
   weight = 50
   url = "https://gohugo.io"
 
@@ -60,12 +60,12 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   rssFullContent = false     # if false, Rss feed instead of the summary
 
   # site info (optional)                                  # 站点信息（可选，不需要的可以直接注释掉）
-  logoTitle = "博客小站"        # default: the title value    # 默认值: 上面设置的title值
-  # keywords = ["Hugo", "theme","jane"]
+  logoTitle = "晴天"        # default: the title value    # 默认值: 上面设置的title值
+  keywords = ["Hugo", "theme","jane"]
   description = "In me the tiger sniffs the rose"
 
   # paginate of archives, tags and categories             # 归档、标签、分类每页显示的文章数目，建议修改为一个较大的值
-  archive-paginate = 10
+  archive-paginate = 6
 
   # paginate style, default use numbered pagination links
   # if true, use original "Previous" and "Next" links.
@@ -77,6 +77,8 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   # show word count and read time ?                       # 是否显示字数统计与阅读时间
   moreMeta = true
 
+  baidu_analytics = "ca4837698f527dfc5b1df9cea50c23e3" 
+   
   [params.gitment]          # Gitment is a comment system based on GitHub issues. see https://github.com/imsun/gitment
   owner = "pugongyingbo"              # Your GitHub ID
   repo = "https://github.com/pugongyingbo/pugongyingbo.com"               # The repo to store comments
@@ -84,7 +86,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
   clientSecret = "1d357d8fef00e2e061cde20737e215d6c551db86"       # Your client secret
 
   # 一些全局开关，你也可以在每一篇内容的 front matter 中针对单篇内容关闭或开启某些功能，在 archetypes/default.md 查看更多信息。
-  toc = false                                                                            # 是否开启目录
+  toc = true                                                                            # 是否开启目录
   fancybox = false           # see https://github.com/fancyapps/fancybox                 # 
   customCSS = []            # if ['custom.css'], load '/static/css/custom.css' file
   customJS = []             # if ['custom.js'], load '/static/js/custom.js' file
